Doc: improve "Context Menus" section of Menu's documentation

- Simplify code snippet.
- Simplify note about desktop platforms.

Task-number: QTBUG-134903
Pick-to: 6.9
Change-Id: Ibc0db63fd3f0692c42d0b2e6685d4437850cb5a8
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>